<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".StartDistributionActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/start_distribution"
            android:textColor="@color/principal_blue"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="302dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_packages"
            android:textColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextGuide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/traking_guide_hing"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackingPlanRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextGuide"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextGuide"
            app:layout_constraintTop_toBottomOf="@+id/addPackToPlanButton" />

        <Button
            android:id="@+id/addPackToPlanButton"
            style="@style/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_button"
            app:layout_constraintEnd_toEndOf="@+id/editTextGuide"
            app:layout_constraintStart_toStartOf="@+id/editTextGuide"
            app:layout_constraintTop_toBottomOf="@+id/editTextGuide" />

        <ImageButton
            android:id="@+id/continueButton"
            style="@style/updateButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/logoutButton"
            style="@style/updateButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
